# openapi/openapi.json
@@ -87,6 +87,17 @@
             "example": "2024-05-10"
           },
           {
+            "name": "expireAt",
+            "in": "query",
+            "description": "Validity date of bundles, used to retrieve all bundles that expire at the specified date (yyyy-MM-dd)",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "format": "date"
+            },
+            "example": "2024-05-10"
+          },
+          {
             "name": "limit",
             "in": "query",
             "description": "Number of items for page",
@@ -3632,7 +3643,7 @@
             "description": "Number of items for page",
             "required": false,
             "schema": {
-              "maximum": 100,
+              "maximum": 200,
               "type": "integer",
               "format": "int32",
               "default": 50
@@ -3641,10 +3652,9 @@
           {
             "name": "page",
             "in": "query",
-            "description": "Page number. Page number value starts from 0",
+            "description": "Page number",
             "required": false,
             "schema": {
-              "maximum": 10000,
               "minimum": 0,
               "type": "integer",
               "format": "int32",
@@ -4233,7 +4243,7 @@
             "description": "Number of items for page",
             "required": false,
             "schema": {
-              "maximum": 100,
+              "maximum": 200,
               "type": "integer",
               "format": "int32",
               "default": 50
@@ -4245,7 +4255,6 @@
             "description": "Page number",
             "required": false,
             "schema": {
-              "maximum": 10000,
               "minimum": 0,
               "type": "integer",
               "format": "int32",
@@ -4402,7 +4411,7 @@
             "description": "Number of items for page",
             "required": false,
             "schema": {
-              "maximum": 100,
+              "maximum": 200,
               "type": "integer",
               "format": "int32",
               "default": 50
@@ -4414,7 +4423,6 @@
             "description": "Page number",
             "required": false,
             "schema": {
-              "maximum": 10000,
               "minimum": 0,
               "type": "integer",
               "format": "int32",
@@ -5741,6 +5749,9 @@
             "format": "date-time"
           },
           "idChannel": {
+            "type": "string"
+          },
+          "idPsp": {
             "type": "string"
           },
           "idBrokerPsp": {
