# src/main/java/it/pagopa/afm/marketplacebe/controller/BundleController.java
@@ -65,10 +65,11 @@ public class BundleController {
             @Parameter(description = "Bundle's type") @RequestParam(required = false, defaultValue = "GLOBAL") @Valid List<BundleType> types,
             @Parameter(description = "Bundle's name") @RequestParam(required = false) @Valid String name,
             @Parameter(description = "Validity date of bundles, used to retrieve all bundles valid from the specified date (yyyy-MM-dd)", example = "2024-05-10") @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate validFrom,
+            @Parameter(description = "Validity date of bundles, used to retrieve all bundles that expire at the specified date (yyyy-MM-dd)", example = "2024-05-10") @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate expireAt,
             @Parameter(description = "Number of items for page") @RequestParam(required = false, defaultValue = "50") @Positive Integer limit,
             @Parameter(description = "Page number") @RequestParam(required = false, defaultValue = "0") @Min(0) @PositiveOrZero Integer page
     ) {
-        return ResponseEntity.ok(this.bundleService.getBundles(types, name, validFrom, limit, page));
+        return ResponseEntity.ok(this.bundleService.getBundles(types, name, validFrom, expireAt, limit, page));
     }
 
     /**
