# src/main/java/it/pagopa/afm/marketplacebe/controller/PspController.java
@@ -148,8 +148,8 @@ public class PspController {
             @Size(max = 35) @Parameter(description = "PSP identifier", required = true) @PathVariable("idpsp") String idPsp,
             @Parameter(description = "Bundle identifier", required = true) @PathVariable("idbundle") String idBundle,
             @Parameter(description = "CI fiscal code") @RequestParam(required = false) @Valid String ciFiscalCode,
-            @Positive @Parameter(description = "Number of items for page") @RequestParam(required = false, defaultValue = "50") @Max(100) Integer limit,
-            @PositiveOrZero @Parameter(description = "Page number. Page number value starts from 0") @RequestParam(required = false, defaultValue = "0") @Max(10000) Integer page) {
+            @Parameter(description = "Number of items for page") @RequestParam(required = false, defaultValue = "50") @Positive @Max(200) Integer limit,
+            @Parameter(description = "Page number") @RequestParam(required = false, defaultValue = "0") @PositiveOrZero @Min(0) Integer page) {
         return ResponseEntity.ok(bundleService.getCIs(idBundle, idPsp, ciFiscalCode, limit, page));
     }
 
@@ -305,8 +305,8 @@ public class PspController {
             @Parameter(description = "PSP identifier", required = true) @PathVariable("idpsp") @Size(max = 35) String idPsp,
             @Parameter(description = "Filter by creditor institution") @RequestParam(required = false) String ciTaxCode,
             @Parameter(description = "Filter by bundle id") @RequestParam(required = false) String idBundle,
-            @Parameter(description = "Number of items for page") @RequestParam(required = false, defaultValue = "50") @Positive @Max(100) Integer limit,
-            @Parameter(description = "Page number") @RequestParam(required = false, defaultValue = "0") @PositiveOrZero @Min(0) @Max(10000) Integer page
+            @Parameter(description = "Number of items for page") @RequestParam(required = false, defaultValue = "50") @Positive @Max(200) Integer limit,
+            @Parameter(description = "Page number") @RequestParam(required = false, defaultValue = "0") @PositiveOrZero @Min(0) Integer page
     ) {
         return ResponseEntity.ok(bundleOfferService.getPspOffers(idPsp, ciTaxCode, idBundle, limit, page));
     }
@@ -392,8 +392,8 @@ public class PspController {
             @Parameter(description = "PSP identifier", required = true) @PathVariable("idpsp") @Size(max = 35) String idPsp,
             @Parameter(description = "Filter by creditor institution") @RequestParam(required = false) String ciFiscalCode,
             @Parameter(description = "Filter by bundle id") @RequestParam(required = false) String idBundle,
-            @Parameter(description = "Number of items for page") @RequestParam(required = false, defaultValue = "50") @Positive @Max(100) Integer limit,
-            @Parameter(description = "Page number") @RequestParam(required = false, defaultValue = "0") @PositiveOrZero @Min(0) @Max(10000) Integer page
+            @Parameter(description = "Number of items for page") @RequestParam(required = false, defaultValue = "50") @Positive @Max(200) Integer limit,
+            @Parameter(description = "Page number") @RequestParam(required = false, defaultValue = "0") @PositiveOrZero @Min(0) Integer page
             ) {
         return bundleRequestService.getPublicBundleRequests(idPsp, limit, page, ciFiscalCode, idBundle);
     }
